<resources>
    <string name="app_name">Blood For Life</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER NOW</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User?</string>
    <string name="fullName">Full Name</string>
    <string name="contactno">Contact No:</string>
    <string name="hideContact">Want to hide contact no?</string>
    <string name="dateofBirth">Date of Birth (Select a Date)</string>
    <string name="gender">Gender</string>
    <string-array name="bloodGroup">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="address">Address</string>
    <string name="division">Division</string>
    <string name="district">District</string>
    <string name="thana">Police Station</string>
    <string name="areaName">Area Name</string>
    <string name="beADonor">Are you a Blood Donor?</string>
    <string name="open"> open</string>
    <string name="close">close</string>
    <string name="drawer_menu_general">General</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_myprofile">My Profile</string>
    <string name="drawer_menu_postrequest">Post A Request</string>
    <string name="drawer_menu_myachievements">My Achievements</string>
    <string name="drawer_menu_donorsection">Donors</string>
    <string name="drawer_menu_finddonors">Find Donors</string>
    <string name="drawer_menu_alldonors">All Donors</string>
    <string name="drawer_menu_services">Services</string>
    <string name="drawer_menu_hospital">Hospitals</string>
    <string name="drawer_menu_ambulance">Ambulances</string>
    <string name="drawer_menu_logout">Logout</string>
    <string-array name="patientBloodGroup">
        <item>Select Patient Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="All_Division">
        <item>Select Division</item>
        <item>Barishal</item>
        <item>Chittagong</item>
        <item>Dhaka</item>
        <item>Mymensingh</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
        <item>Rangpur</item>
        <item>Sylhet</item>
    </string-array>
    <string-array name="No_District">
        <item>Select District</item>
    </string-array>
    <string-array name="No_SubDistrict">
        <item>Select SubDistrict</item>
    </string-array>
    <string-array name="District_of_Barishal">
        <item>Select District</item>
        <item>Barguna</item>
        <item>Barishal</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
    </string-array>
    <string-array name="Sub_District_of_Barguna">
        <item>Select SubDistrict</item>
        <item>Amtali</item>
        <item>Bamna</item>
        <item>Barguna Sadar</item>
        <item>Betagi</item>
        <item>Patharghata</item>
        <item>Taltali</item>
    </string-array>
    <string-array name="Sub_District_of_Barishal">
        <item>Select SubDistrict</item>
        <item>Agailjhara</item>
        <item>Babuganj</item>
        <item>Bakerganj</item>
        <item>Banaripara</item>
        <item>Gaurnadi</item>
        <item>Hizla</item>
        <item>Barishal Sadar</item>
        <item>Mehendiganj</item>
        <item>Muladi</item>
        <item>Wazirpur</item>
    </string-array>
    <string-array name="Sub_District_of_Bhola">
        <item>Select SubDistrict</item>
        <item>Bhola Sadar</item>
        <item>Burhanuddin</item>
        <item>Char Fasson</item>
        <item>Daulatkhan</item>
        <item>Lalmohan</item>
        <item>Manpura</item>
        <item>Tazumuddin</item>
    </string-array>
    <string-array name="Sub_District_of_Jhalokati">
        <item>Select SubDistrict</item>
        <item>Jhalokati Sadar</item>
        <item>Kathalia</item>
        <item>Nalchity</item>
        <item>Rajapur</item>
    </string-array>
    <string-array name="Sub_District_of_Patuakhali">
        <item>Select SubDistrict</item>
        <item>Bauphal</item>
        <item>Dashmina</item>
        <item>Galachipa</item>
        <item>Kalapara</item>
        <item>Mirzaganj</item>
        <item>Patuakhali Sadar</item>
        <item>Rangabali</item>
        <item>Dumki</item>
    </string-array>
    <string-array name="Sub_District_of_Pirojpur">
        <item>Select SubDistrict</item>
        <item>Bhandaria</item>
        <item>Kawkhali</item>
        <item>Mathbaria</item>
        <item>Nazirpur</item>
        <item>Pirojpur Sadar</item>
        <item>Nesarabad(Swarupkati)</item>
        <item>Indurkani</item>
    </string-array>
    <string-array name="District_of_Chittagong">
        <item>Select District</item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chattogram</item>
        <item>Cumilla</item>
        <item>Coxs Bazar</item>
        <item>Feni</item>
        <item>Khagrachari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
    </string-array>
    <string-array name="Sub_District_of_Bandarban">
        <item>Select SubDistrict</item>
        <item>Ali Kadam</item>
        <item>Bandarban Sadar</item>
        <item>Lama</item>
        <item>Naikhongchhari</item>
        <item>Rowangchhari</item>
        <item>Ruma</item>
        <item>Thanchi</item>
    </string-array>
    <string-array name="Sub_District_of_Brahmanbaria">
        <item>Select SubDistrict</item>
        <item>Akhaura</item>
        <item>Bancharampur</item>
        <item>Brahmanbaria Sadar</item>
        <item>Kasba</item>
        <item>Nabinagar</item>
        <item>Nasirnagar</item>
        <item>Sarail</item>
        <item>Ashuganj</item>
        <item>Bijoynagar</item>
    </string-array>
    <string-array name="Sub_District_of_Chandpur">
        <item>Select SubDistrict</item>
        <item>Chandpur Sadar</item>
        <item>Faridganj</item>
        <item>Haimchar</item>
        <item>Haziganj</item>
        <item>Kachua</item>
        <item>Matlab Dakshin</item>
        <item>Matlab Uttar</item>
        <item>Shahrasti</item>
    </string-array>
    <string-array name="Sub_District_of_Chattogram">
        <item>Select SubDistrict</item>
        <item>Anwara</item>
        <item>Banshkhali</item>
        <item>Boalkhali</item>
        <item>Chandanaish</item>
        <item>Fatikchhari</item>
        <item>Hathazari</item>
        <item>Karnaphuli</item>
        <item>Lohagara</item>
        <item>Mirsharai</item>
        <item>Patiya</item>
        <item>Rangunia</item>
        <item>Raozan</item>
        <item>Sandwip</item>
        <item>Satkania</item>
        <item>Sitakunda</item>
    </string-array>
    <string-array name="Sub_District_of_Cumilla">
        <item>Select SubDistrict</item>
        <item>Barura</item>
        <item>Brahmanpara</item>
        <item>Burichang</item>
        <item>Chandina</item>
        <item>Chauddagram</item>
        <item>Daudkandi</item>
        <item>Debidwar</item>
        <item>Homna</item>
        <item>Laksam</item>
        <item>Lalmai</item>
        <item>Muradnagar</item>
        <item>Nangalkot</item>
        <item>Cumilla Sadar(Adarsha)</item>
        <item>Meghna</item>
        <item>Titas</item>
        <item>Monohargonj</item>
        <item>Cumilla Sadar(Dakshin)</item>
    </string-array>
    <string-array name="Sub_District_of_CoxBazar">
        <item>Select SubDistrict</item>
        <item>Chakaria</item>
        <item>Coxs Bazar Sadar</item>
        <item>Kutubdia</item>
        <item>Maheshkhali</item>
        <item>Ramu</item>
        <item>Teknaf</item>
        <item>Ukhia</item>
        <item>Pekua</item>
    </string-array>
    <string-array name="Sub_District_of_Feni">
        <item>Sele SubDistrict</item>
        <item>Chhagalnaiya</item>
        <item>Daganbhuiyan</item>
        <item>Feni Sadar</item>
        <item>Parshuram</item>
        <item>Sonagazi</item>
        <item>Fulgazi</item>
    </string-array>
    <string-array name="Sub_District_of_Khagrachari">
        <item>Select SubDistrict</item>
        <item>Dighinala</item>
        <item>Khagrachhari</item>
        <item>Lakshmichhari</item>
        <item>Mahalchhari</item>
        <item>Manikchhari</item>
        <item>Matiranga</item>
        <item>Panchhari</item>
        <item>Ramgarh</item>
    </string-array>
    <string-array name="Sub_District_of_Lakshmipur">
        <item>Select SubDistrict</item>
        <item>Lakshmipur Sadar</item>
        <item>Raipur</item>
        <item>Ramganj</item>
        <item>Ramgati</item>
        <item>Kamalnagar</item>
    </string-array>
    <string-array name="Sub_District_of_Noakhali">
        <item>Select SubDistrict</item>
        <item>Begumganj</item>
        <item>Noakhali Sadar</item>
        <item>Chatkhil</item>
        <item>Companiganj</item>
        <item>Hatiya</item>
        <item>Senbagh</item>
        <item>Sonaimuri</item>
        <item>Subarnachar</item>
        <item>Kabirhat</item>
    </string-array>
    <string-array name="Sub_District_of_Rangamati">
        <item>Select SubDistrict</item>
        <item>Bagaichhari</item>
        <item>Barkal</item>
        <item>Kawkhali(Betbunia)</item>
        <item>Belaichhari</item>
        <item>Kaptai</item>
        <item>Juraichhari</item>
        <item>Langadu</item>
        <item>Naniyachar</item>
        <item>Rajasthali</item>
        <item>Rangamati Sadar</item>
    </string-array>
    <string-array name="District_of_Dhaka">
        <item>Select District</item>
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Tangail</item>
    </string-array>
    <string-array name="Sub_District_of_Dhaka">
        <item>Select SubDistrict</item>
        <item>Dhamrai</item>
        <item>Dohar</item>
        <item>Keraniganj</item>
        <item>Nawabganj</item>
        <item>North City</item>
        <item>South City</item>
        <item>Savar</item>
        <item>Tejgaon Circle</item>
    </string-array>
    <string-array name="Sub_District_of_Faridpur">
        <item>Select SubDistrict</item>
        <item>Alfadanga</item>
        <item>Bhanga</item>
        <item>Boalmari</item>
        <item>Charbhadrasan</item>
        <item>Faridpur Sadar</item>
        <item>Madhukhali</item>
        <item>Nagarkanda</item>
        <item>Sadarpur</item>
        <item>Saltha</item>
    </string-array>
    <string-array name="Sub_District_of_Gazipur">
        <item>Select SubDistrict</item>
        <item>Gazipur Sadar</item>
        <item>Kaliakair</item>
        <item>Kaliganj</item>
        <item>Kapasia</item>
        <item>Sreepur</item>
    </string-array>
</resources>