<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/wave"
            />
        <EditText
            android:id="@+id/editFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/editprofileperson"
            android:textSize="16sp"
            android:ems="10"
            android:hint="@string/fullName"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_email"
            android:textSize="16sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/editContactno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/profile_phone"
            android:textSize="16sp"
            android:ems="10"
            android:hint="@string/contactno"
            android:inputType="phone"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            />

        <CheckBox
            android:id="@+id/editHideContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/hideContact"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:theme="@style/AppTheme"
            />

        <TextView
            android:id="@+id/editDateofbirth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/round_border"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/profile_birthdate"
            android:textSize="16sp"
            android:ems="10"
            android:hint="@string/dateofBirth"
            android:inputType="date"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/editBloodGroupSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Blood Group"
            android:padding="10dp"
            android:layout_marginBottom="5dp"

            />
        <TextView
            android:id="@+id/textAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/address"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/editDivision"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/round_border"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/division"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:id="@+id/editDistrict"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="29dp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/round_border"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/district"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/editThana"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/round_border"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/thana"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:id="@+id/editAreaname"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="29dp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/round_border"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/areaName"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

        <CheckBox
            android:id="@+id/eidtBeDonor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="Want to be a donor to save life?"
            android:layout_marginBottom="5dp"
            android:theme="@style/AppTheme"
            android:textSize="14sp"
            android:visibility="visible"
            />
        <CheckBox
            android:id="@+id/editHasProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="Have any Problem to Donate?"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:theme="@style/AppTheme"
            android:visibility="visible"
            />

        <ProgressBar
            android:id="@+id/editProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btnUpdateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_bg"
            android:text="Update Profile"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>


</ScrollView>